testsuite/bsc.interra/messages/EUnboundTyCon/EUnboundTyCon.bs.bsc-out.expected
checking package dependencies
compiling EUnboundTyCon.bs
Error: "EUnboundTyCon.bs", line 19, column 14: (T0007)
  Unbound type constructor `Real'
